--- a/frontend/src/app/components/chat/message-list/message-list.component.html
+++ b/frontend/src/app/components/chat/message-list/message-list.component.html
@@ -3,5 +3,6 @@
     *ngFor="let msg of messages; trackBy: trackByMsgId"
     [msg]="msg"
     [isMine]="msg.senderId === currentUserId"
+    (deleteRequest)="onDelete($event)"
   ></app-message-bubble>
 </section>
